-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.5.0 FF
-
None
-
40a8e2cb8c (qt/qtwebchannel/dev) 40a8e2cb8c (qt/tqtc-qtwebchannel/dev)
agent:2022/08/12 19:53:07 build.go:394: 2: ********* Start testing of TestWebChannel ********* agent:2022/08/12 19:53:07 build.go:394: 2: Config: Using QtTest library 6.5.0, Qt 6.5.0 (arm64-little_endian-lp64 shared (dynamic) release build; by Apple LLVM 13.0.0 (clang-1300.0.29.30)), macos 11.6 agent:2022/08/12 19:53:07 build.go:394: 2: INFO : TestWebChannel::initTestCase() entering agent:2022/08/12 19:53:07 build.go:394: 2: PASS : TestWebChannel::initTestCase() agent:2022/08/12 19:53:07 build.go:394: 2: INFO : TestWebChannel::testPassWrappedObjectBack() entering agent:2022/08/12 19:53:07 build.go:394: 2: QWARN : TestWebChannel::testPassWrappedObjectBack() [ 0.000 W] default unknown:0 unknown() - QMetaMethod::invoke: cannot convert formal parameter 0 from QObject* in call to TestObject::setReturnedObject(TestObject*) agent:2022/08/12 19:53:07 build.go:394: 2: INFO : TestWebChannel::testPassWrappedObjectBack() QCOMPARE(registeredObj.mReturnedObject, &returnedObjMethod) agent:2022/08/12 19:53:07 build.go:394: 2: Loc: [/Users/qt/work/qt/qtwebchannel/tests/auto/webchannel/tst_webchannel.cpp(916)] agent:2022/08/12 19:53:07 build.go:394: 2: FAIL! : TestWebChannel::testPassWrappedObjectBack() Compared QObject pointers are not the same agent:2022/08/12 19:53:07 build.go:394: 2: Actual (registeredObj.mReturnedObject): <null> agent:2022/08/12 19:53:07 build.go:394: 2: Expected (&returnedObjMethod) : TestObject/0x16fc41328 agent:2022/08/12 19:53:07 build.go:394: 2: Loc: [/Users/qt/work/qt/qtwebchannel/tests/auto/webchannel/tst_webchannel.cpp(916)] agent:2022/08/12 19:53:07 build.go:394: 2: INFO : TestWebChannel::cleanupTestCase() entering agent:2022/08/12 19:53:07 build.go:394: 2: PASS : TestWebChannel::cleanupTestCase() agent:2022/08/12 19:53:07 build.go:394: 2: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 1ms agent:2022/08/12 19:53:07 build.go:394: 2: ********* Finished testing of TestWebChannel ********* agent:2022/08/12 19:53:07 build.go:394: 2: qt-testrunner.py INFO: Test process exited with code: 1 agent:2022/08/12 19:53:07 build.go:394: 2: qt-testrunner.py INFO: Test has FAILed despite all repetitions! re-runs:5 failures:5 agent:2022/08/12 19:53:07 build.go:394: 2: CMake Error at tst_webchannelWrapperRelWithDebInfo.cmake:17 (message): agent:2022/08/12 19:53:07 build.go:394: 2: /Users/qt/work/install/libexec/qt-testrunner.py -- agent:2022/08/12 19:53:07 build.go:394: 2: /Users/qt/work/qt/qtwebchannel_standalone_tests/tests/auto/webchannel/tst_webchannel agent:2022/08/12 19:53:07 build.go:394: 2: execution failed with exit code 2. agent:2022/08/12 19:53:07 build.go:394: 2: agent:2022/08/12 19:53:07 build.go:394: 2: agent:2022/08/12 19:53:07 build.go:394: 2/3 Test #2: tst_webchannel ...................***Failed 17.20 sec agent:2022/08/12 19:53:07 build.go:394: 50% tests passed, 1 tests failed out of 2 agent:2022/08/12 19:53:07 build.go:394: Label Time Summary: agent:2022/08/12 19:53:07 build.go:394: tests/auto/qml/tst_qmlwebchannel = 0.00 sec*proc (0 test) agent:2022/08/12 19:53:07 build.go:394: tests/auto/webchannel/tst_webchannel = 17.20 sec*proc (1 test) agent:2022/08/12 19:53:07 build.go:394: Total Test time (real) = 19.10 sec agent:2022/08/12 19:53:07 build.go:394: The following tests FAILED: agent:2022/08/12 19:53:07 build.go:394: 2 - tst_webchannel (Failed) agent:2022/08/12 19:53:07 build.go:394: Errors while running CTest agent:2022/08/12 19:53:07 build.go:394: Output from these tests are in: /Users/qt/work/qt/qtwebchannel_standalone_tests/Testing/Temporary/LastTest.log agent:2022/08/12 19:53:07 build.go:394: Use "--rerun-failed --output-on-failure" to re-run the failed cases verbosely. agent:2022/08/12 19:53:07 build.go:445: Process finished with error: exit status 8 agent:2022/08/12 19:53:07 build.go:805: Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some agent:2022/08/12 19:53:07 build.go:635: Skip uploading core files because CORE_FILES_PATH is not set in the environment agent:2022/08/12 19:53:07 build.go:813: agent:2022/08/12 19:53:07 build.go:805: Executing scheduled instruction 2 of 2 - Upload test results agent:2022/08/12 19:53:07 storageclient.go:533: Collecting test results, archiving and uploading them agent:2022/08/12 19:53:07 result.go:217: Collecting 6 test results ... agent:2022/08/12 19:53:08 build.go:813: agent:2022/08/12 19:53:08 agent.go:411: Test failed agent:2022/08/12 19:53:08 agent.go:248: ERROR building: exit status 8
Details: https://testresults.qt.io/coin/integration/qt/qtwebchannel/tasks/1660338776
Tested changes (refs/builds/qtci/dev/1660333808):
https://codereview.qt-project.org/c/qt/qtwebchannel/+/426543/2 Update dependencies on 'dev' in qt/qtwebchannel
- resulted from
-
QTBUG-105616 QMetaMethod::invoke() does not properly check QObject pointers for compatibility anymore
-
- Reported
-
For Gerrit Dashboard: QTBUG-105596 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
422204,8 | QMetaObjectPublisher: use new way to QMetaObject::invokeMethod | dev | qt/qtwebchannel | Status: MERGED | +2 | 0 |
426808,3 | QMetaObject: export the invokeImpl inner method | dev | qt/qtbase | Status: MERGED | +2 | 0 |
426810,6 | QMetaObjectBuilder: pass meta types to QMetaMethodInvoker | dev | qt/qtwebchannel | Status: MERGED | +2 | 0 |